--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Node tRPC Patterns</title>
   </head>
-  <body
-    class="bg-white text-neutral-900 dark:bg-black  dark:text-neutral-100"
-  >
+  <body class="bg-white text-neutral-900 dark:bg-black dark:text-neutral-100">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
